_sass/main.scss
//TODO
// Update header/nav padding (see Projects page)
// Link skills to Projects
// Add Bowtie projects
// Get rid of extra images and assets
// Refactor modal script to apply for project images
// Add dark mode
// Add skills: SASS, Bootstrap
// Add Certifications and Technologies
// Add hoverstate to social icons in footer

@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Bodoni+Moda:opsz,wght@6..96,400;6..96,700&family=Butcherman&family=Eczar:wght@400;500;600;700;800&family=Fruktur&family=IM+Fell+English:ital@0;1&family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Katibeh&family=Kavoon&family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Rubik+Wet+Paint&display=swap');

/* fonts

font-family: 'Bangers', cursive;
font-family: 'Bodoni Moda', serif;
font-family: 'Butcherman', cursive;
font-family: 'Eczar', serif;
font-family: 'Fruktur', cursive;
font-family: 'Ibarra Real Nova', serif;
font-family: 'IM Fell English', serif;
font-family: 'Katibeh', cursive;
font-family: 'Kavoon', cursive;
font-family: 'Luckiest Guy', cursive;
font-family: 'Open Sans', sans-serif;
font-family: 'Rubik Wet Paint', cursive;
*/


@font-face {
    font-family: 'yipesregular';
    src: url('/assets/fonts/Yipes.ttf') format("truetype");
    font-weight: normal;
    font-style: normal;
}

body {
    font-family: 'Open Sans', sans-serif;
    padding-top: 3.5rem;
    margin: 0;
    display: flex;
    min-height: 100vh;
    flex-direction: column;
    background-color: oldlace;
    // padding-left: 10rem;
    // padding-right: 10rem;
    // @media screen and (max-width: 900px) {
    //     padding: 3rem;
    // }
}

.padrule {
    padding-left: 12rem;
    padding-right: 12rem;
    @media screen and (max-width: 900px) {
        padding: 2.5rem;
    }
    @media screen and (max-width: 740px) {
        padding: 0 2.5rem;
    }
}

.content {
    flex: 1;
}

a {
    color: black;
    text-decoration: none;
    font-weight: 600;
}

a:hover {
    color: darkolivegreen;
    text-decoration: underline wavy;
    text-underline-offset: 5px;
}

.title:hover {
    text-decoration: none!important;
    font-weight: 600;
}

.current {
    color: darkolivegreen;
    text-decoration: underline wavy;
    text-underline-offset: 5px;
}

nav {
    padding-left: 3rem!important;
    @media screen and (max-width: 740px) {
        padding-left: 33px;
        padding-bottom: 0;
    }
}

nav a {
    @media screen and (max-width: 740px) {
        text-align: center!important;
    }
}

.navigation {
    @media screen and (max-width: 740px) {
        text-align: center!important;
    }
}

h1 {
    font-family: 'Ibarra Real Nova', serif;
    font-size: 3em;
    font-weight: 300;
}


h2 {
    font-family: 'Ibarra Real Nova', serif;
    font-size: 2.25rem;
    font-weight: 300;
    padding-top: 3rem;
    padding-bottom: 2rem;
}

h3 {
    font-size: 1.5rem;
    font-weight: 600;
    padding-top: 3rem;
    padding-bottom: 1rem;
    @media screen and (max-width: 740px) {
        padding-top:1rem;
    }
}

.row {
    width: 100%;
}

.intro {
    padding-top: 3rem;
    padding-bottom: 10rem;
    @media screen and (max-width: 740px) {
        padding-bottom: 5rem;;
    }
}

//wavy shapes
.shape {
    position: relative;
}

.shape-bottom {
    @media screen and (max-width: 740px) {
        padding-bottom: 2rem;
    }
}

//shape 1
.custom-shape-divider-top-1658328325 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1658328325 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 127px;
}

.custom-shape-divider-top-1658328325 .shape-fill {
    fill: #FDF5E6;
}

//shape 2
.custom-shape-divider-top-1658328596 {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    overflow: hidden;
    line-height: 0;
}

.custom-shape-divider-top-1658328596 svg {
    position: relative;
    display: block;
    width: calc(100% + 1.3px);
    height: 127px;
    transform: rotateY(180deg);
}

.custom-shape-divider-top-1658328596 .shape-fill {
    fill: #A1AA82;
}

.headshot {
    align-items: center;
    justify-content: center;
    display: flex;
    
}

.circle {
    // border: 10px solid #cbb3148c;
    border-radius: 50%;
    max-width: 100%;
    @media screen and (max-width: 900px) {
        max-width: 70%;
    }
    @media screen and (min-width: 1300px) {
        max-width: 70%;
    }
}

.skills {
    font-weight: 400;
    line-height: 2rem;
}


.skillscont {
    background-image: url(./assets/img/green-wave-4.png);
    background-size: 100%;
    background-position: 0 20%;
    background-repeat: no-repeat;
    background-color: #A1AA82;
    padding-top: 8em;
    padding-bottom: 2rem;

    @media screen and (max-width: 740px) {
        background-image: url(./assets/img/green-wave-3.png);
        background-size: 150%;
    }
    @media screen and (max-width: 480px) {
        background-image: url(./assets/img/green-wave-3.png);
        background-size: 200%;
    }
    @media screen and (max-width: 360px) {
        background-image: url(./assets/img/green-wave-3.png);
        background-size: 300%;

    }
}

// .experience {
//     margin-top: 3rem;
// }

// .contained {
//     padding-top: 5%;
//     // padding-left: 10%;
//     // padding-right: 10%;
//     align-content: center;
// }

/*Footer*/

footer a {
    color: #201901;
    text-decoration: none;
    font-weight: 600;
}

footer a:hover {
    color: #201901;
    text-decoration: underline wavy;
    text-underline-offset: 5px;
}

footer .current {
    color: #201901;
    text-decoration: underline wavy;
    text-underline-offset: 5px;
}

.tiny {
    max-width: 10%;
}

.no-bullet {
    list-style-type: none;
}

footer {
    padding-top: 15em;
    padding-bottom: 2em;
    color: black;
    font-weight: 600;
    font-size: .75rem;
    margin-top: auto;
    bottom: 0;
    background-color: #A1AA82;
}

/* Resume */

.resume-image {
    max-width: 70%;
    border: 10px solid #A1AA82;
}

/* Projects */

.project-image {
    max-width: 100%;
    border-radius: 5%;
}

.project-info {
    justify-content: left;
    align-items: center;
    display: flex;
    @media screen and (max-width: 740px) {
     padding-top: 2.5rem;
    }
}

.mobile-col {
    @media screen and (max-width: 740px) {
        margin-bottom: 1rem;
       }
}

.project-stack {
    color: #535353;
}

.project-overview li {
    margin: 10px 0;
}

.disclaimer {
    font-size: 12px;
    font-weight: 700;
}

/* decorations */
.flower2 {
    position: absolute;
    top: 0;
    right: 0;
    opacity: 50%;
    z-index: -1;
    overflow: unset;
}

.flower2img {
    width: 250px;
}

.flower {
    top: 500px;
    position: absolute;
    left: -120px;
    // opacity: 50%;
    z-index: 1;
    overflow: unset;
    transform: rotate(15deg);
}

.flowerimg {
    width: 250px;

    @media screen and (max-width: 900px) {
        display: none;
    }
}

.mushrooms {
    position: absolute;
    right: 0;
    top: 60rem;
    // opacity: 50%;
    z-index: 1;
    overflow: unset;
}

.mushroomimg {
    width: 250px;
    @media screen and (max-width: 900px) {
        display:none;
    }
}

.plant {
    position: absolute;
    left: 0;
    opacity: 50%;
    z-index: -1;
    overflow: unset;
}

.plantimg {
    max-width: 50%;
}

.minimalist {
    max-width: 70%;
    margin: 0 auto;
}

.minimalist2 {
    max-width: 70%;
    margin: 0 auto;
    transform: scaleX(-1)
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content */
  .modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
  }
  
  /* The Close Button */
  .close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
  }



/* Contact */

.intro-text {
    margin: auto;
    padding-left: 4rem;
}

/* Tools */
.tools {
    max-width: 100px;
}

.logo {
    text-align: center;
    margin-bottom: 1.1rem;;
}

.logo img {
    max-height: 100px;
}

.logocaption {
    margin-top: .5rem;
}

.short-logo {
    height: 100px;
    transform: translateY(30%);
}

.grid {
    display: grid;
    grid-template-columns: auto auto auto auto auto;
    @media screen and (max-width: 740px) {
        display:none;
    }
}

.logo-height {
    height: 100px;
}

